# SUPER-IVIM-DC

./: .gitignore  2  Classsic_ivim_fit.py  Dockerfile  Example_1_simple_map.py  Example_2_simulations.py  Example_3_volunteer.py  README.md  directories.py  environment.yml  exp1_numerical_simulations.py  exp2_healthy_vol_study.py  exp3_fetal_data.py  hunan_pre_processing.py  ivim_fit_sample.ipynb  ivim_fit_test.py  main.py  plot.py  pyproject.toml  requirements.txt  sample.ipynb  setup.py
.github/workflows/: pypi.yml
IVIMNET/: deep.py  run_deep.py  run_simulations.py  simulations.py
IVIMNET/deep/: Net.py  README.md  learn.py  predict.py
IVIMNET/fitting_algorithms/: __init__.py  bayesian.py  dats.py  least_squares.py  segmented.py
IVIMNET/inference/: clinical_supervised_ivim.py  leastsquares_ivim.py  supervised_ivim.py
IVIMNET/simulations/: README.md  __init__.py  clinical_signal.py  segments_signal.py  sim.py  sim_signal.py  sim_signal_predict.py
IVIMNET/utils/: __init__.py  anova_stats.py  checkarg.py  columns.py  dicom_to_numpy.py  hyperparams.py  ivim4images.py  order.py  (+4 more)
SUPER_IVIM_DC/: run_deep.py  run_simulations.py
datasets/: PhantomData_forExp2.npz
demos/: Exp1a_Noise_Response.html  Exp1a_Noise_Response.ipynb  Exp1b_Noise_Response.ipynb  Exp2_Phantom_Menace.ipynb
source/: fetal_pre_processing.py  plot.py  train_model.py  utiles.py
super_ivim_dc/: infer.py
working_dir/: IVIMNET_SNR_10_sf_1.pt  IVIMNET_infer.txt  IVIMSUPER_infer.txt  SUPER-IVIM-DC_SNR_10_sf_1.pt  exp1_IVIMNET_NRMSE_snr_10_sf_1.csv  exp1_SUPER-IVIM-DC_NRMSE_snr_10_sf_1.csv
(+227 files in other folders)
