[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-ivim-dc"
version = "1.1.2"
description = ""
authors = []
license = { file = "LICENSE" }
readme = "README.md"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "SimpleITK",
    "torch",
    "tqdm",
    "joblib",
    "nlopt"
]

[project.scripts]
super-ivim-dc = "super_ivim_dc.main:main"
super-ivim-dc-sim-infer = "super_ivim_dc.infer:infer_entry"
super-ivim-dc-sim = "super_ivim_dc.simulate:simulate_entry"
